--- a/index.html
+++ b/index.html
@@ -2,93 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script defer src="checkers.js"></script>
     <title>Checkers!</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
-        <tr>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="0"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="1"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="2"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="3"></p></td>
-        </tr>
-        <tr>
-            <td><p class="red-piece" id="4"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="5"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="6"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="7"></p></td>
-            <td class="noPiece"></td>
-        </tr>
-        <tr>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="8"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="9"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="10"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="red-piece" id="11"></p></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-        </tr>
-        <tr>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-            <td class="noPiece"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td><p class="black-piece" id="12"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="13"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="14"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="15"></p></td>
-            <td class="noPiece"></td>
-        </tr>
-        <tr>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="16"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="17"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="18"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="19"></p></td>
-        </tr>
-        <tr>
-            <td><p class="black-piece" id="20"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="21"></p></td>
-            <td class="noPiece">
-            <td><p class="black-piece" id="22"></p></td>
-            <td class="noPiece"></td>
-            <td><p class="black-piece" id="23"></p></td>
-            <td class="noPiece"></td>
-        </tr>
-    </table>
+    <main>
+    <h1>CHECKERS</h1>
+        <table>
+            <tr>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="0"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="1"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="2"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="3"></p></td>
+            </tr>
+            <tr>
+                <td><p class="red-piece" id="4"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="5"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="6"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="7"></p></td>
+                <td class="noPieceHere"></td>
+            </tr>
+            <tr>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="8"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="9"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="10"></p></td>
+                <td class="noPieceHere"></td>
+                <td><p class="red-piece" id="11"></p></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+            </tr>
+            <tr>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+                <td class="noPieceHere"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><span class="black-piece" id="12"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="13"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="14"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="15"></span></td>
+                <td class="noPieceHere"></td>
+            </tr>
+            <tr>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="16"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="17"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="18"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="19"></span></td>
+            </tr>
+            <tr>
+                <td><span class="black-piece" id="20"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="21"></span></td>
+                <td class="noPieceHere">
+                <td><span class="black-piece" id="22"></span></td>
+                <td class="noPieceHere"></td>
+                <td><span class="black-piece" id="23"></span></td>
+                <td class="noPieceHere"></td>
+            </tr>
+        </table>
+        <div class="desktop">
+            <div class="red-turn-text">
+                Reds turn
+            </div>
+            <p id="divider">|</p>
+            <div class="black-turn-text">
+                Blacks turn
+            </div>
+        </div>
+    </main>
 </body>
 </html>
