working checkers game

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <main>
     <h1>CHECKERS</h1>
+    <!--CITATION-->
         <table>
             <tr>
                 <td class="noPieceHere"></td>
@@ -95,12 +96,12 @@
                 <td class="noPieceHere"></td>
             </tr>
         </table>
-        <div class="desktop">
-            <div class="red-turn-text">
+        <div class="turn">
+            <div class="red-text">
                 Reds turn
             </div>
             <p id="divider">|</p>
-            <div class="black-turn-text">
+            <div class="black-text">
                 Blacks turn
             </div>
         </div>
